# trello_calendar_routine

./: .gitignore  Makefile  README.md  hello.py  pyproject.toml
src/: config.py  main.py
